objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Bequest</fullName>
        <description>Used to manage the stages in a Bequest</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Enquiry</fullName>
        </values>
        <values>
            <fullName>In Administration</fullName>
        </values>
        <values>
            <fullName>Intending</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Corporate Support Day</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Cultivating</fullName>
        </values>
        <values>
            <fullName>Enquiry</fullName>
        </values>
        <values>
            <fullName>Invoice Sent</fullName>
        </values>
        <values>
            <fullName>Proposal%2FReview</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Donation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Event Tickets</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Refunded</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Grant</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Application Submitted</fullName>
        </values>
        <values>
            <fullName>Awarded</fullName>
        </values>
        <values>
            <fullName>LOI Submitted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Home Ever After</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cultivation</fullName>
        </values>
        <values>
            <fullName>Enquiry</fullName>
        </values>
        <values>
            <fullName>Enrolled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>In-Kind Gift</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cultivating</fullName>
        </values>
        <values>
            <fullName>In-Kind Not Yet Received</fullName>
        </values>
        <values>
            <fullName>In-Kind Received</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Major Gift</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Cultivation</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Identification</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Proposal%2FReview</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Solicitation</fullName>
        </values>
        <values>
            <fullName>Verbal Commitment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Matching Gift</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Membership</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Enquiry</fullName>
        </values>
        <values>
            <fullName>Enrolled</fullName>
        </values>
        <values>
            <fullName>Expired</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Pending Renewal</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Merchandise</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Property Transfer</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Advised</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Retained</fullName>
        </values>
        <values>
            <fullName>Sold</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Raffle Ticket</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Securities</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Advised</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Transferred</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sponsorships</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Invoice Sent</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FReview</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ASX_Code__c</fullName>
        <label>ASX Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Created_Date__c</fullName>
        <formula>Account.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_x2_the_last_gift__c</fullName>
        <formula>Amount &gt; (2 * npsp__Primary_Contact__r.npo02__LastOppAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount x2 the last gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Animal_Adopt_a_Pet_ID__c</fullName>
        <label>Animal Adopt a Pet ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Name__c</fullName>
        <label>Animal Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Type__c</fullName>
        <label>Animal Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Animal</label>
        <referenceTo>Animal__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Submitted_Date__c</fullName>
        <label>Application Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BSB__c</fullName>
        <label>BSB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Name__c</fullName>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Branch__c</fullName>
        <label>Bank Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Number__c</fullName>
        <label>Bank Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch</label>
        <referenceTo>Batch__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bequest_Conditions__c</fullName>
        <description>Indicates any specific conditions or items associated with the Bequest</description>
        <inlineHelpText>Outline any specific items, i.e. property or shares, or conditions that are stated in the Will</inlineHelpText>
        <label>Bequest Conditions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bequest_Percentage__c</fullName>
        <description>Indicates the value of the Percentage stated as part of a Residual or Percentage Based Bequest</description>
        <inlineHelpText>Indicates the value of the Percentage stated as part of a Residual or Percentage Based Bequest</inlineHelpText>
        <label>Bequest Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Branch Members</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaing_Id_Include_CCD__c</fullName>
        <formula>IF(  CONTAINS(Campaign.Name , &quot;Cupcake Day&quot;) , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaing Id (Include CCD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cheque_Drawer__c</fullName>
        <label>Cheque Drawer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Number__c</fullName>
        <label>Cheque Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Funded_Services_Total__c</fullName>
        <label>Client Funded Services Total</label>
        <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Payment_Method__c</field>
            <operation>notEqual</operation>
            <value>Partner Funded, RSPCA Funded</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_Met__c</fullName>
        <label>Condition Met</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_By_Recurring_Donation__c</fullName>
        <formula>npe03__Recurring_Donation__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Recurring Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Notified_of_Death__c</fullName>
        <formula>npsp__Primary_Contact__r.Date_Notified_of_Death__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Notified of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Will__c</fullName>
        <label>Date of Will</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Marked_Deceased__c</fullName>
        <formula>TOday () - npsp__Primary_Contact__r.Date_Notified_of_Death__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Marked Deceased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deceased_Date__c</fullName>
        <formula>npsp__Primary_Contact__r.Deceased_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deceased Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Code__c</fullName>
        <label>Discount Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Donor_Type__c</fullName>
        <label>Donor Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Organisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Value_Bequest__c</fullName>
        <label>Expected Value %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Value_P__c</fullName>
        <formula>Expected_Value__c /  Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Value %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Value__c</fullName>
        <label>Expected Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfilment_Requirements__c</fullName>
        <label>Fulfilment Requirements</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Gift_Card_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift Card To</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_In_Will_Type__c</fullName>
        <label>Gift In Will Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Shares</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gift_Value__c</fullName>
        <formula>Share_Value__c  *  TotalOpportunityQuantity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Instalment_Value__c</fullName>
        <label>Instalment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Sent_Date__c</fullName>
        <label>Invoice Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Membership_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Membership Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_This_First_Donation__c</fullName>
        <formula>npsp__Primary_Contact__r.Count_of_Donations__c == 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is This First Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOI_Submitted_Date__c</fullName>
        <label>LOI Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Life_Tenancy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Life Tenancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linked_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Linked Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Home Ever After Membership</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Volunteer_Branch__c</fullName>
        <label>Local Volunteer Branch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Albury</fullName>
                </value>
                <value>
                    <fullName>Armidale</fullName>
                </value>
                <value>
                    <fullName>Bathurst</fullName>
                </value>
                <value>
                    <fullName>Blue Mountains</fullName>
                </value>
                <value>
                    <fullName>Broken Hill</fullName>
                </value>
                <value>
                    <fullName>Central West</fullName>
                </value>
                <value>
                    <fullName>Cooma</fullName>
                </value>
                <value>
                    <fullName>Eurobodalla</fullName>
                </value>
                <value>
                    <fullName>Glen Innes</fullName>
                </value>
                <value>
                    <fullName>Goulburn</fullName>
                </value>
                <value>
                    <fullName>Gunnedah</fullName>
                </value>
                <value>
                    <fullName>Hunter</fullName>
                </value>
                <value>
                    <fullName>Inverell</fullName>
                </value>
                <value>
                    <fullName>Illawarra</fullName>
                </value>
                <value>
                    <fullName>Mudgee</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Port Macquarie</fullName>
                </value>
                <value>
                    <fullName>Tamworth</fullName>
                </value>
                <value>
                    <fullName>Taree</fullName>
                </value>
                <value>
                    <fullName>Tenterfield</fullName>
                </value>
                <value>
                    <fullName>Sapphire Coast</fullName>
                </value>
                <value>
                    <fullName>Shoalhaven</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Blue Mountains</fullName>
                </value>
                <value>
                    <fullName>Coffs Harbour</fullName>
                </value>
                <value>
                    <fullName>Hunter</fullName>
                </value>
                <value>
                    <fullName>Illawarra</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Yagoona</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>No Bequest Received</fullName>
                </value>
                <value>
                    <fullName>Bequest Revoked</fullName>
                </value>
                <value>
                    <fullName>Error - Never Confirmed</fullName>
                </value>
                <value>
                    <fullName>Legacy Pet Deceased</fullName>
                </value>
                <value>
                    <fullName>Estate Failed - Insolvency</fullName>
                </value>
                <value>
                    <fullName>Estate Failed - RSPCA Aus/MS claimed</fullName>
                </value>
                <value>
                    <fullName>Estate Failed - Lost Contestation</fullName>
                </value>
                <value>
                    <fullName>Participant withdraw</fullName>
                </value>
                <value>
                    <fullName>RSPCA cancel</fullName>
                </value>
                <value>
                    <fullName>Failure to pay</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Number__c</fullName>
        <formula>npsp__Primary_Contact__r.Actual_Member_Number__c</formula>
        <label>Member Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_ID__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>Membership ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Membership_Type__c</fullName>
        <label>Membership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RSPCA NSW Membership</fullName>
                </value>
                <value>
                    <fullName>Home Ever After</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_on_Cheque__c</fullName>
        <label>Name on Cheque</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Narrative__c</fullName>
        <label>Narrative</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Net_Profit_Loss__c</fullName>
        <formula>Amount -  Transfer_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Profit/Loss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Failed_Payments__c</fullName>
        <label>Number of Failed Payments</label>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npsp_plus__Status__c</field>
            <operation>equals</operation>
            <value>Dishonoured, Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Pending_Payments__c</fullName>
        <label>Number of Pending Payments</label>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npsp_plus__Status__c</field>
            <operation>equals</operation>
            <value>Initialized, Pending, NULL</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Paid__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Written_Off__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Tickets_Purchased__c</fullName>
        <label>Number of Tickets Purchased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Drive_Folder_Name__c</fullName>
        <formula>Id + &apos;_dev&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Drive Folder Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adoption pack</fullName>
                </value>
                <value>
                    <fullName>Australian Cat/Dog Lovers</fullName>
                </value>
                <value>
                    <fullName>Brochure_other</fullName>
                </value>
                <value>
                    <fullName>Brochure_shelter</fullName>
                </value>
                <value>
                    <fullName>DM</fullName>
                </value>
                <value>
                    <fullName>DRTV</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Function</fullName>
                </value>
                <value>
                    <fullName>GiW newsletter</fullName>
                </value>
                <value>
                    <fullName>Health Care worker</fullName>
                </value>
                <value>
                    <fullName>Latte Life</fullName>
                </value>
                <value>
                    <fullName>Local Council</fullName>
                </value>
                <value>
                    <fullName>Meals on Wheels</fullName>
                </value>
                <value>
                    <fullName>Medical Centre</fullName>
                </value>
                <value>
                    <fullName>Newcastle Weekly</fullName>
                </value>
                <value>
                    <fullName>NRMA magazine</fullName>
                </value>
                <value>
                    <fullName>NSW Seniors Festival</fullName>
                </value>
                <value>
                    <fullName>Over 50s Lifestyle magazine</fullName>
                </value>
                <value>
                    <fullName>Petbarn</fullName>
                </value>
                <value>
                    <fullName>Retirement home</fullName>
                </value>
                <value>
                    <fullName>RSPCA NSW rep/brand</fullName>
                </value>
                <value>
                    <fullName>RSPCA NSW website</fullName>
                </value>
                <value>
                    <fullName>RSPCA Survey</fullName>
                </value>
                <value>
                    <fullName>Search engine result</fullName>
                </value>
                <value>
                    <fullName>Senior for Seniors</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Solicitor/advisor</fullName>
                </value>
                <value>
                    <fullName>The Senior</fullName>
                </value>
                <value>
                    <fullName>TM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paperwork_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if all the supporting paperwork received has been received and attached.</description>
        <inlineHelpText>Indicates if all the supporting paperwork received has been received and attached.</inlineHelpText>
        <label>Paperwork Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunities (Split Payment)</description>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Split Payment)</relationshipLabel>
        <relationshipName>Opportunities_Split_Payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Funded_Services_Total__c</fullName>
        <label>Partner Funded Services Total</label>
        <summarizedField>npe01__OppPayment__c.npe01__Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>npe01__OppPayment__c.npe01__Payment_Method__c</field>
            <operation>equals</operation>
            <value>Partner Funded</value>
        </summaryFilterItems>
        <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Off</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>BPAY</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Asset - Property Transfer</fullName>
                </value>
                <value>
                    <fullName>Asset - Securities</fullName>
                </value>
                <value>
                    <fullName>EziDebit</fullName>
                </value>
                <value>
                    <fullName>CentrePay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>